<resources>
    <string name="app_name">Cadastro</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="uf_label">UF:</string>
    <string name="cidade">Cidade</string>
    <string name="cidade_label">Cidade:</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="sexo_label">Sexo:</string>
    <string name="ingressar_na_lista_de_e_mails">Ingressar na lista de e-mails?</string>
    <string name="email_label">Email:</string>
    <string name="telefone_hint">Ex: 12-93456-7890</string>
    <string name="telefone_label">Telefone:</string>
    <string name="nome_completo_label">Nome completo:</string>

    <string-array name="uf_array">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>

</resources>